--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -44,7 +44,7 @@ h1.page-header {
 }
 
 .sidebar-logo {
-    width: 100px;
+    width: 80px;
     margin: auto;
 }
 
@@ -61,6 +61,7 @@ h1.page-header {
     border-bottom: 1px solid #e7e7e7;
     display: block;
     height: auto;
+    padding: 10px;
 }
 
 label.control-label {
