Add invoice print page

--- a/public/assets/css/app.s.css
+++ b/public/assets/css/app.s.css
@@ -248,7 +248,7 @@ html {
   -webkit-tap-highlight-color: transparent; }
 
 body {
-  font-family: "Liberation Serif", Helvetica, Arial, sans-serif;
+  font-family: "Trebuchet MS", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.428571429;
   color: #333333;
