Update style for .form-check.unstyled Bootstrap 3

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -177,6 +177,9 @@ h3.site-description {
     margin-right: 10px;
     padding-left: 0;
 }
+.form-check.unstyled {
+    margin-bottom: 6px;
+}
 .checkbox-inline+.checkbox-inline, .radio-inline+.radio-inline {
     margin-left: 0;
 }
